force-app/main/default/objects/Factory_Price__c/Factory_Price__c.object-meta.xml
<CustomObject>
    <label>Factory Price</label>
    <nameField>
        <displayFormat>T1-{000000}</displayFormat>
        <label>Factory Parameter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factory Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>