force-app/main/default/objects/Factory_Price__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <description>Business Attribute to identify the applicable Revenue and Cost Parameters</description>
    <label>Business Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Business_Types</valueSetName>
    </valueSet>
</CustomField>