force-app/main/default/objects/Factory_Price__c/fields/Factory_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Factory_Multiplier__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Factory Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>