force-app/main/default/objects/Factory_Price__c/fields/FactoryPriceMultiplier__c.field-meta.xml
<CustomField>
    <fullName>FactoryPriceMultiplier__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Factory Price Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>