force-app/main/default/objects/Factory_Price__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Groups</valueSetName>
    </valueSet>
</CustomField>