force-app/main/default/objects/Factory_Price__c/fields/ProductModel__c.field-meta.xml
<CustomField>
    <fullName>ProductModel__c</fullName>
    <label>Product Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Product_Models</valueSetName>
    </valueSet>
</CustomField>