force-app/main/default/objects/Factory_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Organization__c</columns>
    <columns>Country__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Model__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Factory_Multiplier__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>