force-app/main/default/objects/Factory_Price__c/listViews/All_LSU_FI_CON.listView-meta.xml
<ListView>
    <fullName>All_LSU_FI_CON</fullName>
    <columns>Organization__c</columns>
    <columns>Country__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Factory_Multiplier__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>FI</value>
    </filters>
    <filters>
        <field>Business_Type__c</field>
        <operation>equals</operation>
        <value>Consumer</value>
    </filters>
    <label>All LSU FI Consumer</label>
</ListView>