force-app/main/default/objects/Factory_Price__c/listViews/All_LSU_FI_Consumer_Extra_Sales.listView-meta.xml
<ListView>
    <fullName>All_LSU_FI_Consumer_Extra_Sales</fullName>
    <columns>Organization__c</columns>
    <columns>Country__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Factory_Multiplier__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>FI</value>
    </filters>
    <filters>
        <field>Business_Type__c</field>
        <operation>equals</operation>
        <value>Consumer</value>
    </filters>
    <filters>
        <field>Cost_Type__c</field>
        <operation>equals</operation>
        <value>asennus ca,asennus fi,asennus es,asennus se,nostok. ca,nostok. fi,nostok. es,nostok. se,myynti ca,myynti fi,myynti es,myynti se</value>
    </filters>
    <label>All LSU FI Consumer Extra Sales</label>
</ListView>