force-app/main/default/objects/Factory_Price__c/listViews/LSU_FI_Consumer_LGR.listView-meta.xml
<ListView>
    <fullName>LSU_FI_Consumer_LGR</fullName>
    <columns>NAME</columns>
    <columns>Organization__c</columns>
    <columns>Country__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Product_Model__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>Factory_Multiplier__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>FI</value>
    </filters>
    <filters>
        <field>Business_Type__c</field>
        <operation>equals</operation>
        <value>Consumer</value>
    </filters>
    <filters>
        <field>Product_Group__c</field>
        <operation>equals</operation>
        <value>LG</value>
    </filters>
    <label>LSU FI Consumer LGR</label>
</ListView>